--- a/JavaScript-Web/js-back-end/9-validation-and-error-handling/cubicle-part4/views/layouts/main.hbs
+++ b/JavaScript-Web/js-back-end/9-validation-and-error-handling/cubicle-part4/views/layouts/main.hbs
@@ -25,14 +25,15 @@
                 {{/if}}
             </ul>
         </header>
+
+        {{#if errors}}
+        <div id="notifications">
+            {{#each errors}}
+            <p>{{this}}</p>
+            {{/each}}
+        </div>
+        {{/if}}
         <main>
-            {{#if errors}}
-            <span class="error">
-                {{#each errors}}
-                    <p>{{this}}</p>
-                {{/each}}
-            </span>
-            {{/if}}
 
             {{{body}}}
 
