--- a/JavaScript-Web/front-end-framework/angular/3-di-intro-to-rxjs-services/lecture3/src/app/app.component.html
+++ b/JavaScript-Web/front-end-framework/angular/3-di-intro-to-rxjs-services/lecture3/src/app/app.component.html
@@ -1,7 +1,13 @@
 <h2>Header</h2>
-
+<app-time></app-time>
 <div id="content">
-    <app-user-list [userArray]="userService.users" (addUser)="userService.addNewUserHandler($event)"></app-user-list>
+    <div *ngIf="users">
+        <button (click)="reloadButtonHandler()">Reload Data</button>
+        <input #searchInput type="text" placeholder="enter text to search">
+        <button (click)="searchButtonHandler(searchInput)">Go!</button>
+        <app-user-list  [userArray]="users!"></app-user-list>
+    </div>
+    <div *ngIf="!users">Loading...</div>
 </div>
 
 <h2>Footer</h2>
