--- a/JavaScript-Web/front-end-framework/angular/5-modules-and-routing/lecture5.2/src/app/user/user-list/user-list.component.html
+++ b/JavaScript-Web/front-end-framework/angular/5-modules-and-routing/lecture5.2/src/app/user/user-list/user-list.component.html
@@ -1,3 +1,11 @@
-<div id="container">
-    <app-user-list-item *ngFor="let user of userArray" [user]="user"></app-user-list-item>
+<div *ngIf="users">
+    <button (click)="reloadButtonHandler()">Reload Data</button>
+    <input #searchInput type="text" placeholder="enter text to search">
+    <button (click)="searchButtonHandler(searchInput)">Go!</button>
+    <div id="container">
+        <app-user-list-item *ngFor="let user of users" [user]="user"></app-user-list-item>
+    </div>
 </div>
+<div *ngIf="!users">Loading...</div>
+
+
