--- a/JavaScript-Web/front-end-framework/angular/5-modules-and-routing/lecture5.2/src/app/core/header/header.component.html
+++ b/JavaScript-Web/front-end-framework/angular/5-modules-and-routing/lecture5.2/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <h1>HEADER</h1>
 <app-time></app-time>
 <nav>
-    <a routerLink="/user-list">user-list</a>
-    <a routerLink="/about">about us</a>
+    <a routerLink="/user-list" routerLinkActive="active">user-list</a>
+    <a routerLink="/about" routerLinkActive="active">about us</a>
 </nav>
