--- a/JavaScript-Web/front-end-framework/angular/5-modules-and-routing/lecture5.2/src/app/user/user-list/user-list.component.html
+++ b/JavaScript-Web/front-end-framework/angular/5-modules-and-routing/lecture5.2/src/app/user/user-list/user-list.component.html
@@ -6,6 +6,4 @@
         <app-user-list-item *ngFor="let user of users" [user]="user"></app-user-list-item>
     </div>
 </div>
-<div *ngIf="!users">Loading...</div>
-
-
+<app-loader *ngIf="!users"></app-loader>
