--- a/JavaScript-Web/front-end-framework/angular/5-modules-and-routing/lecture5.2/src/app/core/header/header.component.html
+++ b/JavaScript-Web/front-end-framework/angular/5-modules-and-routing/lecture5.2/src/app/core/header/header.component.html
@@ -3,4 +3,5 @@
 <nav>
     <a routerLink="/user-list" routerLinkActive="active">user-list</a>
     <a routerLink="/about" routerLinkActive="active">about us</a>
+    <a routerLink="/test" routerLinkActive="active">test</a>
 </nav>
