--- a/JavaScript-Web/front-end-framework/angular/6-workshop-modules-and-routing/client/src/app/theme/themes/themes.component.html
+++ b/JavaScript-Web/front-end-framework/angular/6-workshop-modules-and-routing/client/src/app/theme/themes/themes.component.html
@@ -1,28 +1,36 @@
-<!-- theme component  -->
-<div *ngIf="themes" class="theme-title">
-    <div *ngFor="let theme of themes" class="theme-container">
-        <div class="theme-name-wrapper">
-            <div class="theme-name">
-                <a href="#" class="normal">
-                    <h2>{{theme.themeName}}</h2>
-                </a>
-                <div class="columns">
-                    <div>
-                        <p>Date: <time>{{theme.created_at}}</time></p>
-                        <div class="nick-name">
-                            <p>Username: <span>{{theme.userId.username}}</span></p>
+<app-welcome-message *ngIf="!isLogged" [isLogged]="false"></app-welcome-message>
+
+<div class="container">
+    <main>
+        <div class="theme-title">
+            <div *ngIf="themes" class="theme-title">
+                <div *ngFor="let theme of themes" class="theme-container">
+                    <div class="theme-name-wrapper">
+                        <div class="theme-name">
+                            <a href="#" class="normal">
+                                <h2>{{theme.themeName}}</h2>
+                            </a>
+                            <div class="columns">
+                                <div>
+                                    <p>Date: <time>{{theme.created_at}}</time></p>
+                                    <div class="nick-name">
+                                        <p>Username: <span>{{theme.userId.username}}</span></p>
+                                    </div>
+                                </div>
+                                <div class="subscribers">
+                                    <!-- <button class="subscribe">Subscribe</button> -->
+                                    <p>Subscribers: <span>{{theme.subscribers.length}}</span></p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="subscribers">
-                        <!-- <button class="subscribe">Subscribe</button> -->
-                        <p>Subscribers: <span>{{theme.subscribers.length}}</span></p>
                     </div>
                 </div>
             </div>
+            
+            <div *ngIf="!themes">
+                loading themes...
+            </div>
         </div>
-    </div>
-</div>
-
-<div *ngIf="!themes">
-    loading themes...
+    </main>
+    <app-aside title="Recent Posts" [items]="recentPosts"></app-aside>
 </div>
