--- a/JavaScript-Web/front-end-framework/angular/6-workshop-modules-and-routing/client/src/app/theme/themes/themes.component.html
+++ b/JavaScript-Web/front-end-framework/angular/6-workshop-modules-and-routing/client/src/app/theme/themes/themes.component.html
@@ -7,7 +7,7 @@
                 <div *ngFor="let theme of themes" class="theme-container">
                     <div class="theme-name-wrapper">
                         <div class="theme-name">
-                            <a href="#" class="normal">
+                            <a [routerLink]="['/themes', theme._id]" class="normal">
                                 <h2>{{theme.themeName}}</h2>
                             </a>
                             <div class="columns">
@@ -18,7 +18,7 @@
                                     </div>
                                 </div>
                                 <div class="subscribers">
-                                    <!-- <button class="subscribe">Subscribe</button> -->
+                                    <button *ngIf="isLogged" class="subscribe">Subscribe</button>
                                     <p>Subscribers: <span>{{theme.subscribers.length}}</span></p>
                                 </div>
                             </div>
