--- a/JavaScript-Web/front-end-framework/angular/7-forms/lecture7/src/app/core/header/header.component.html
+++ b/JavaScript-Web/front-end-framework/angular/7-forms/lecture7/src/app/core/header/header.component.html
@@ -4,4 +4,5 @@
     <a routerLink="/user-list" routerLinkActive="active">user-list</a>
     <a routerLink="/about" routerLinkActive="active">about us</a>
     <a routerLink="/test" routerLinkActive="active">test</a>
+    <a routerLink="/login" routerLinkActive="active">login</a>
 </nav>
