--- a/JavaScript-Web/front-end-framework/angular/7-forms/lecture7/src/app/core/header/header.component.html
+++ b/JavaScript-Web/front-end-framework/angular/7-forms/lecture7/src/app/core/header/header.component.html
@@ -5,4 +5,5 @@
     <a routerLink="/about" routerLinkActive="active">about us</a>
     <a routerLink="/test" routerLinkActive="active">test</a>
     <a routerLink="/login" routerLinkActive="active">login</a>
+    <a routerLink="/register" routerLinkActive="active">register</a>
 </nav>
